--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-.App {
-  text-align: center;
-}
 
+.App {
+  text-align: center; 
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +35,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+/* New CSS */
+
+.panel-content{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0 10px;
 }
