--- a/src/Components/Header/Dropdown.css
+++ b/src/Components/Header/Dropdown.css
@@ -4,7 +4,8 @@
     flex-direction: column;
     width: 100px;
     position: relative;
-    margin: 20px;
+    margin: 0px 20px;
+    padding: 10px 0px;
     /* user-select: none !important; */
 }
 
@@ -37,7 +38,8 @@
     padding: 0px 20px;
     border-radius: 5px;
     z-index: 1;
-    background: linear-gradient(45deg, #ffffff, #e6e6e6);
+    /* background: linear-gradient(45deg, #ffffff, #e6e6e6); */
+    background-color:  rgb(255, 255, 255);
     border: 1px solid #00000021;
 }
 
