--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,13 +1,13 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
     transition: 0.3s;
-    margin: 10px 0;
-    padding: 5px;
-    height: 130px;
+    margin: 20px 10px;
+    /* padding: 5px; */
+    height: fit-content;
     width: 350px;
     border-radius: 5px;
     background-color: white;
-
+  
   }
   
   .card:hover {
@@ -17,6 +17,7 @@
   .container {
     position: relative;
     padding: 40px 10px; /* Add padding to make space for absolutely positioned elements */
+    margin: 10px 0px;
   }
   
   .name {
@@ -29,8 +30,7 @@
   .icon {
     position: absolute;
     top: 0;
-    right: 0;
-    background-color: yellow;
+    right: 0; 
     border-radius: 50%;
     height: 25px;
     width: 25px;
